apps/example/ingress-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "example.192.168.49.2.sslip.io"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - "example.192.168.49.2.sslip.io"
  gateways:
    - httpbin-gateway
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 8000
          host: httpbin
